cannot fix scrollbar problem; resorting to overflow: hidden hack for now

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -3,7 +3,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: none;
+    overflow: hidden;
 }
 
 #wrapper {
